revise data files

--- a/wineframe.rmd
+++ b/wineframe.rmd
@@ -12,8 +12,8 @@ library(leaflet)
 library(readr)
 
 # load data
-wine_master <- read_csv("data/mastersetof_fullscopedata_deduped.csv")
-wine_bottles <- read_csv("data/beta_spread_wine_bottles.csv")
+wine_master <- read_csv("data/wine-master.csv")
+wine_bottles <- read_csv("data/wine-betas.csv")
 mapPolys <- geojsonio::geojson_read("data/countries.geo.json", what = "sp")
 
 
