--- a/wineframe.rmd
+++ b/wineframe.rmd
@@ -2,7 +2,6 @@
 title: "Blood and Wine: The Wild Hunt"
 output: 
   flexdashboard::flex_dashboard:
-    orientation: rows
 runtime: shiny
 ---
   
@@ -11,18 +10,26 @@ library(flexdashboard)
 library(leaflet)
 library(readr)
 
-# load data
-wine_master <- read_csv("data/wine-master.csv")
-wine_bottles <- read_csv("data/wine-betas.csv")
-mapPolys <- geojsonio::geojson_read("data/countries.geo.json", what = "sp")
-
-
-
+# UTF fix
 
 source.utf8 <- function(f) {
     l <- readLines(f, encoding="UTF-8")
     eval(parse(text=l),envir=.GlobalEnv)
 }
+
+# include helper
+
+source("r/chloropleth.R")
+
+# load data
+wine_file <- read_csv("data/wine-master.csv")
+wine_master <- wine_file[,c(24,26:33)]
+wine_bottles <- read_csv("data/wine-betas.csv")
+mapPolys <- geojsonio::geojson_read("data/countries.geo.json", what = "sp")
+names(mapPolys) = c("id","country")
+#mergedMap = sp::merge(mapPolys,wine_master)
+
+
 ```
 
 Identify your favourite flavours >>
@@ -57,8 +64,8 @@ polygon(pricingDensity, col = "blue", border="red")
 ```{r}
 
 ```
-Sample the relationships >>
-===========================
+Sample the relationships >> {data-orientation=rows}
+===================================================
 
 Row {data-height = 150}
 ------------------------
@@ -85,7 +92,27 @@ Row {.tabset, data-height = 500}
 
 Locate your favourite flavours >>
 =================================
+Inputs {.sidebar}
+---------------------------------------------------------------------
 
+Column {.tabset .tabset-fade}
+-----------------------------------------------------------------------
+### Price
+```{r}
+wines_by_price = wine_master[, c("country","price")]
+mapByPrice = aggregate(wines_by_price, list( wines_by_price$country), median, na.action = na.omit)
+pal <- colorBin("Blues", domain = mapByPrice$price, bins = 5, na.color = "white")
+  
+leaflet(sp::merge(mapPolys,mapByPrice)) %>% addPolygons(
+    fillColor = ~pal(price),
+    weight = 2,
+    opacity = 1,
+    color = "black",
+    fillOpacity = 1.0
+  ) %>% addLegend(pal = pal, values = ~price, opacity = 0.7, title = NULL,
+                  position = "bottomright")
+```
+### Topics
 
 And now ... Drink and view the entire array!{data-orientation=columns}
 ======================================================================
@@ -93,9 +120,7 @@ Inputs {.sidebar}
 ---------------------------------------------------------------------------------
 ```{r}
 
-sliderInput(inputId = "labels", label = "Number of Labels", min = 462, max = nrow(wine_master), value= 500, step = 100, round = TRUE, ticks = TRUE, animate = FALSE,
-  width = NULL, pre = NULL, post = NULL, timeFormat = NULL,
-  timezone = NULL, dragRange = TRUE)
+numericInput(inputId = "labels", label = "Number of Labels", min = 500, max = nrow(wine_master), value= 500, step = 100, width = '50px')
 
 ```
 
@@ -103,7 +128,7 @@ Column
 --------------------------------------------------------------------------------
 ```{r}
 renderTable({
-  wine_master[1:10,]
+  wine_master
 })
 
 ```
